# marvinway_robot

./: .gitignore  .gitmodules  README.md
brain/: .gitignore  CMakeLists.txt  boostrap_teensy32.sh
brain/scripts/cmake/: README.md  teensy-arm.toolchain.cmake
brain/src/: main.cpp
brain/src/mpu6050/: CMakeLists.txt  MPU6050.cpp
control/control_dev/: Readme.md
control/control_dev/carte/: control_dev.GBL  control_dev.GBO  control_dev.GBS  control_dev.GTL  control_dev.GTO  control_dev.GTS  control_dev.TXT  control_dev.b#1  control_dev.brd  control_dev.dri  control_dev.gpi  control_dev.pro  control_dev.sch  eagle.epf
control/fpga/agrajag/: agrajag.xise  decoder.vhd  inputoutput.vhd  pwm.vhd
docs/besoin/: marvinBesoin.tex
docs/elec/: CMakeLists.txt  elec.bib  elec.tex
docs/shield/: interface shield.tex  presentation.docx
docs/vim/: cheatSheetForVim.tex
experience/auto_pwm/pwm/: pwm.cpp
experience/fpga/papilioone/agrajag/: BPC3003-Papilio_One-general.ucf  agrajag.xise
experience/fpga/xilinx/pwm/: Untitled.cfi  Untitled.mcs  Untitled.prm  auto_project.ipf  debouncer.vhd  default.ipf  edgeDetector.vhd  output.txt  pwm.vhd  pwm.xise  test.vhd  top.cfi  top.mcs  top.prm  top.ucf  top.vhd
experience/fpga/xilinx/simulations/decoder/: decoder.vhdl
experience/fpga/xilinx/zrtech_tests/: _impact.cmd  auto_project.ipf  auto_project_1.ipf  debounce.vhd  leds.vhd  output.txt  tools.vhd  top.cfi  top.mcs  top.prm  top.ucf  zrtech_tests.xise
experience/gyroscopicView/: CMakeLists.txt  README.md  cmake_install.cmake
experience/gyroscopicView/gyroscopicView/: IGyroStream.h  SerialGyroStream.cpp  SerialGyroStream.h
experience/igloo2/inputoutput/: inputoutput.vhd
experience/mpu6050/: CMakeLists.txt
experience/mpu6050/MPU6050_DMP6/: CMakeLists.txt  MPU6050.cpp  main.cpp
experience/mpu6050/MPU6050_calibration/: Makefile  offsetResult
experience/mpu6050/MPU6050_calibration/cmake/: Teensy.cmake
experience/teensyLoaderCli/: .gitignore
experience/test_asservissement/: CMakeLists.txt
experience/test_asservissement/encoder/: CMakeLists.txt  position.cpp  positionSens.cpp  risingEdge.cpp  speed.cpp  speed_control.cpp
experience/test_blink/blink/: CMakeLists.txt
experience/test_pwm/: CMakeLists.txt
experience/test_servo/: CMakeLists.txt
experience/test_strand/: CMakeLists.txt
experience/test_strand/strandtest/: CMakeLists.txt  strandtest.cpp
meca/marvin/: marvinTete.SLDPRT
meca/pieces/: carte.SLDPRT  fixationMoteur40-2.SLDPRT  jante10-2.SLDPRT  marvin1.SLDASM  moteur-fixation.SLDASM  moteur40-60.SLDPRT  plaque160-80-2.SLDPRT  plaque200-100-6.SLDPRT  pneu-200-2.SLDPRT  roue200-2.SLDASM
src/auto_pwm/: CMakeLists.txt
src/auto_pwm/pwm/: CMakeLists.txt
src/cmake/Platform/: Arduino.cmake
src/gyroscopicView/: CMakeLists.txt  Makefile  README.md  configure  setup.sh
src/gyroscopicView/gyroscopicView/: KeyboardGyroStream.cpp  KeyboardGyroStream.h  main.c  main.cpp
src/igloo2/decoder/: decoder.cr.mti  decoder.mpf  decoder.vhdl  reset.tcl
src/igloo2/inputoutput/: inputOutput.tcl  inputoutput.mpf  inputoutput.vhd
src/igloo2/servomoteur/: decodage.tcl  edgeDetector.vhd  pwm.vhd  servomoteur.mpf  servomoteur.vhd
src/mpu6050/: CMakeLists.txt  Makefile  configure
src/mpu6050/MPU6050_DMP6/: CMakeLists.txt  MPU6050_DMP6.ino
src/mpu6050/MPU6050_calibration/: CMakeLists.txt  MPU6050_calibration.ino  main.cpp
src/mpu6050/MPU6050_calibration/cmake/: FindArduino.cmake  teensy-arm.toolchain.cmake
src/papilioone/agrajag/: main.vhd
src/teensyLoaderCli/: teensyLoaderCli.sh
src/teensy_power_control/: CMakeLists.txt
src/teensy_power_control/power_ctrl/: CMakeLists.txt  power_ctrl.cpp
src/test/: CMakeLists.txt
src/test/blink/: blink.cpp
src/test/cmake/: ArduinoToolchain.cmake
src/test/cmake/Platform/: Arduino.cmake
src/test_blink/: CMakeLists.txt
src/test_blink/blink/: CMakeLists.txt
src/test_pwm/pwm/: pwm.cpp
src/test_servo/: CMakeLists.txt
src/test_servo/servo/: CMakeLists.txt  servo.cpp
utils/: README.md
utils/Eagle/: ConfigurationDeEagle.md
